plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.plugin.compose'
    id 'org.jetbrains.kotlin.kapt'
    id 'com.google.dagger.hilt.android'
    id 'org.jetbrains.dokka'
}

android {
    namespace 'com.litroenade.yunjiweather'
    compileSdk 35

    defaultConfig {
        applicationId "com.litroenade.yunjiweather"
        minSdk 23
        targetSdk 35
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding false
        buildConfig true
        compose true
    }
    kotlinOptions {
        jvmTarget = '11'
    }
}

kapt {
    correctErrorTypes true
}

dokka {
    dokkaPublications {
        html {
            moduleName.set("YunJi Weather")
            includes.from(rootProject.file('docs/packages.md'))
        }
    }
}

dependencies {

    def composeBom = platform('androidx.compose:compose-bom:2025.04.01')
    implementation composeBom
    androidTestImplementation composeBom

    implementation 'androidx.activity:activity-compose:1.10.1'
    implementation 'androidx.compose.material3:material3'
    implementation 'androidx.compose.runtime:runtime-livedata'
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.lifecycle:lifecycle-livedata:2.8.7'
    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.8.7'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7'
    implementation 'androidx.palette:palette:1.0.0'
    implementation 'androidx.room:room-runtime:2.8.4'
    kapt 'androidx.room:room-compiler:2.8.4'
    implementation 'androidx.work:work-runtime:2.11.2'
    implementation 'androidx.hilt:hilt-work:1.3.0'
    implementation 'com.vanniktech:android-image-cropper:4.7.0'
    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
    implementation 'com.google.dagger:hilt-android:2.57.1'
    kapt 'com.google.dagger:hilt-android-compiler:2.57.1'
    kapt 'androidx.hilt:hilt-compiler:1.3.0'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:core:1.7.0'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
}
